--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -12,17 +12,17 @@
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is your favorite snack food/dessert?</li>
+                        <li>What is your favorite genre of story to read?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/snacks.webp"
-                            alt="pho-fox"
+                            src="images/books_happy_place.jpg"
+                            alt="books happy place"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Wiki Page 1</li>
+                        <li><span class="type">Exercise</span>Wiki Page 2</li>
                     </ul>
                 </div>
 
@@ -32,24 +32,23 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>HTML Indentation Review I</li>
-                            <li><span class="type">Demo</span>HTML Lists | Parent/Child Relationships</li>
+                            <li><span class="type">Kahoot</span>HTML Attributes Review</li>
+                            <li><span class="type">Demo</span>HTML Anchors (Links)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>HTML Attributes</li>
-                            <li><span class="type">Demo</span>HTML Images</li>
-                            <li><span class="type">PowerPoint</span>Clean Code - Part 2</li>
+                            <li><span class="type">Demo</span>HTML Anchors (Links) [cont.]</li>
+                            <li><span class="type">Kahoot</span>HTML Indentation Review II</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Wiki Page 1</li>
+                            <li><span class="type">Exercise</span>Wiki Page 2</li>
                         </ul>
                     </div>
                 </div>
