--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,22 +7,23 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 1st, 2024</h1>
+            <h1>GDWD 105 - Agenda for April 2nd, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>Experience any interesting April Fool's Day pranks today?</li>
+                        <li>What is your favorite color?</li>
                     </ul>
-                    <div class="img-container more-space">
+                    <div class="img-container">
                         <img 
-                            src="images/lab-attire.webp"
-                            alt="tv"
+                            src="images/painter-fox.jpg"
+                            alt="painter fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">N/A</span></li>
+                        <li><span class="type">Exercise</span>Basic CSS Drills</li>
+                        <li><span class="type">Exercise</span>Color Palettes</li>
                     </ul>
                 </div>
 
@@ -32,22 +33,23 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Project Showcase!</span>HTML Potluck</li>
-                            <li><span class="type">Lab Time</span>Assignment Feedback</li>
+                            <li><span class="type">Quiz</span>HTML Fundamentals</li>
+                            <li><span class="type">PowerPoints</span>Intro to CSS and CSS Properties</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>HTML Potluck - Other Options</li>
+                            <li><span class="type">Demo</span>CSS Colors and Text Styling</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Study for Quiz</li>
+                            <li><span class="type">Exercise</span>Basic CSS Drills</li>
+                            <li><span class="type">Exercise</span>Color Palettes</li>
                         </ul>
                     </div>
                 </div>
