--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -12,19 +12,19 @@
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What would your spirit animal be?</li>
+                        <li>Cats? or Dogs? (or both?)</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space">
                         <img 
-                            src="images/spirit-animal-0.jpg"
-                            alt="spirit animal"
+                            src="images/cats-vs-dogs.jpeg"
+                            alt="painter fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Color Palettes</li>
-                        <li><span class="type">Exercise</span>Basic CSS Drills - Part 2</li>
-                        <li><span class="type">Exercise</span>Document Flow Drills</li>
+                        <li><span class="type">Exercise</span>Box Model - Padding Drills</li>
+                        <li><span class="type">Exercise</span>Box Model - Border Drills</li>
+                        <li><span class="type">Exercise</span>Upside-down Tetris</li>
                     </ul>
                 </div>
 
@@ -34,25 +34,24 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Color Palettes (cont.)</li>
-                            <li><span class="type">Exercise</span>Basic CSS Drills - Part 2</li>
+                            <li><span class="type">Kahoot</span>Document Flow and HTML Elements Review</li>
+                            <li><span class="type">PowerPoint</span>Box Model</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>CSS Selectors</li>
-                            <li><span class="type">Demo</span>Divs, Spans, and Flow</li>
+                            <li><span class="type">Demo</span>Box Model</li>
+                            <li><span class="type">Exercise</span>Box Model - Padding Drills</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Document Flow</li>
-                            <li><span class="type">Exercise</span>Document Flow Drills</li>
-                            <li><span class="type">Kahoot</span>CSS Rules Review (?)</li>
+                            <li><span class="type">Exercise</span>Box Model - Border Drills</li>
+                            <li><span class="type">Exercise</span>Upside-down Tetris</li>
                         </ul>
                     </div>
                 </div>
