--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,25 +8,24 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for June 14th</h1>
-            <h3>Week 22 (Intro to CSS) Day 1</h3>
+            <h1>GDWD 105 - Agenda for June 17th</h1>
+            <h3>Week 22 Day 2 (Intro to CSS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is your favorite ice cream flavor? Any toppings?</li>
+                        <li>What is (or was) your favorite breakfast cereal?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/icecream-cats.jpg"
-                            alt="lazy sundae"
+                            src="images/kamehamehos.jpeg"
+                            alt="kamehamehos"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Upside-down Tetris</li>
-                        <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
                         <li><span class="type">Exercise</span>Containers and Selectors Drills</li>
+                        <li><span class="type">Project</span>Generic License</li>
                     </ul>
                 </div>
 
@@ -37,23 +36,21 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Upside-down Tetris</li>
+                            <li><span class="type">Exercise</span>Containers and Selectors Drills</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
-                            <li><span class="type">Demo</span>Combining CSS Selectors</li>
+                            <li><span class="type">Project</span>Generic License</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Combining CSS Selectors (cont.)</li>
-                            <li><span class="type">Exercise</span>Containers and Selectors Drills</li>
+                            <li><span class="type">Project</span>Generic License (cont.)</li>
                         </ul>
                     </div>
                 </div>
