--- a/cookbook/meal-prep/two-column-flex-layouts/page0.html
+++ b/cookbook/meal-prep/two-column-flex-layouts/page0.html
@@ -8,12 +8,12 @@
     </head>
     <body>
         <!-- 
-            Make sure to add the class "two-columns" to the container,
+            Make sure to add the id "two-columns" to the container,
             so that we can style it and its contents later.
         -->
         <div id="two-columns">
             <!-- 
-                Also make sure to add the "sidebar-content" class...
+                Also make sure to add the "sidebar-content" id...
             -->
             <div id="sidebar-content">
                 <h2>BRAND NAME</h2>
@@ -25,7 +25,7 @@
                 </ul>
             </div>
             <!-- 
-                ...and the "main-content" class for styling as well.
+                ...and the "main-content" id for styling as well.
             -->
             <div id="main-content">
                 <h1>Two Columns - Flex</h1>
