--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,25 +8,27 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for June 26th</h1>
-            <h3>Week 23 Day 4 (Content Layouts Day 1)</h3>
+            <h1>GDWD 105 - Agenda for June 27th</h1>
+            <h3>Week 23 Day 5 (Content Layouts Day 2)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>Who is your favorite supervillain? (if you have one)</li>
+                        <li>
+                            If you could create your own ice cream flavor,
+                            what would you put in it, and what would you name it?
+                        </li>
                     </ul>
-                    <div class="img-container more-space off-black">
+                    <div class="img-container">
                         <img 
-                            src="images/venom.jpeg"
-                            alt="venom"
+                            src="images/icecream-cats.jpg"
+                            alt="ice cream"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Quiz</span>Advanced CSS and Page Layouts</li>
-                        <li><span class="type">Exercise</span>Trek Cards</li>
-                        <li><span class="type">Exercise</span>Animagram Cards (?)</li>
+                        <li><span class="type">Exercise</span>Animagram Cards [cont.]</li>
+                        <li><span class="type">Exercise</span>Pokemon Cards</li>
                     </ul>
                 </div>
 
@@ -37,23 +39,23 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Advanced CSS and Page Layouts</li>
-                            <li><span class="type">Demo</span>Cards, Buttons, and Gradients</li>
+                            <li><span class="type">PowerPoint</span>Side-by-Side Content Layouts</li>
+                            <li><span class="type">Demo</span>Media & Text (and more)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Cards, Buttons, and Gradients (cont.)</li>
+                            <li><span class="type">Exercise</span>Animagram Cards [cont.]</li>
+                            <li><span class="type">Exercise</span>Pokemon Cards</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Trek Cards</li>
-                            <li><span class="type">Exercise</span>Animagram Cards</li>
+                            <li><span class="type">Exercise</span>Pokemon Cards</li>
                         </ul>
                     </div>
                 </div>
