--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,26 +8,26 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for June 28th</h1>
-            <h3>Week 24 Day 1 (Content Layouts Day 3)</h3>
+            <h1>GDWD 105 - Agenda for July 1st</h1>
+            <h3>Week 24 Day 2 (Content Layouts Day 4)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Would you rather have a pause or 
-                            rewind button in your life?
+                            Would you rather watch <b>only scary movies</b> or 
+                            <b>only rom-coms</b> for the rest of your life?
                         </li>
                     </ul>
                     <div class="img-container more-space black">
                         <img 
-                            src="images/rewind.png"
-                            alt="be kind, rewind"
+                            src="images/anti-love.jpg"
+                            alt="anti love helmet"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Three Heroes</li>
+                        <li><span class="type">Exercise</span>Themed Gallery Page</li>
                     </ul>
                 </div>
 
@@ -38,11 +38,11 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Hero Content Layouts</li>
+                            <li><span class="type">PowerPoint</span>Gallery Content Layouts</li>
                             <li>
                                 <span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#heroes">
-                                    Heroes
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#galleries">
+                                    Galleries
                                 </a>
                             </li>
                         </ul>
@@ -53,18 +53,18 @@
                         <ul>
                             <li>
                                 <span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#heroes">
-                                    Heroes [cont.]
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#galleries">
+                                    Galleries [cont.]
                                 </a>
                             </li>
-                            <li><span class="type">Exercise</span>Three Heroes</li>
+                            <li><span class="type">Exercise</span>Themed Gallery Page</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Three Heroes [cont.]</li>
+                            <li><span class="type">Exercise</span>Themed Gallery Page</li>
                         </ul>
                     </div>
                 </div>
